[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "hrss"
version = "1.0.0"
description = "High-Res Severe Storm (HRSS) dataset helpers"
requires-python = ">=3.9"
authors = [{ name = "Andy Shi" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.22",
  "pandas>=2.0",
  "h5py>=3.8",
  "matplotlib>=3.7",
  "requests>=2.31; python_version >= '3.9'",
  "tables>=3.9",
]

[project.optional-dependencies]
notebooks = ["jupyter", "ipykernel"]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.5",
  "mypy>=1.8",
]

[project.urls]
Repository = "https://github.com/Stingy37/hrss"

[tool.hatch.build.targets.wheel]
packages = ["hrss"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)s %(name)s:%(lineno)d - %(message)s"
log_cli_date_format = "%H:%M:%S"
addopts = "-s"
