# set which build backend to use 
[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"


[project]
name = "hrss"
version = "1.0.0"
description = "High-Res Severe Storm (HRSS) dataset helpers"
requires-python = ">=3.9"                                      # installation won't succeed if python doens't meet requirements 
authors = [{ name = "Andy Shi" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# for the user -> pip looks at this upon installation, and automatically installs dependencies 
# if user doesn't have them already
dependencies = [
  "numpy>=1.22",
  "pandas>=2.0",
  "h5py>=3.8",
  "matplotlib>=3.7",
  "requests>=2.31; python_version >= '3.9'",
  "tables>=3.9",
]

# optional dependencies for developing
[project.optional-dependencies]
notebooks = ["jupyter", "ipykernel"]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.5",
  "mypy>=1.8",
]

[project.urls]
Repository = "https://github.com/Stingy37/hrss"

# tells hatchling which directories to build for wheel 
[tool.hatch.build.targets.wheel]
packages = ["hrss"] # only include modules inside hrss sub-directory (behavior we expect)

# keep source-distribution focused (but we still need pyproject.toml, etc. so builder can build locally)
[tool.hatch.build.targets.sdist]
# Keep source bundle focused but useful
include = ["hrss", "pyproject.toml", "README.*", "LICENSE*"]
exclude = ["**/__pycache__", ".venv", ".git", "dist", "build"]

# automatically set verbose debugging 
[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)s %(name)s:%(lineno)d - %(message)s"
log_cli_date_format = "%H:%M:%S"
addopts = "-s"
