# set which build backend to use 
[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "hrss"
version = "1.0.0"
description = "High-Res Severe Storm (HRSS) dataset helpers"
requires-python = ">=3.9"
authors = [{ name = "Andy Shi" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# ------------- dependencies
# keep core install minimal; optional features go under extras
dependencies = [
  "numpy>=1.22",
  "pandas>=2.0",
  "h5py>=3.8",
  "requests>=2.31", # for working with zenodo 
  "tables>=3.9",
]

# ------------- optional dependencies 
[project.optional-dependencies]

# Jupyter + plotting for notebooks / quickstart demos
notebooks = [
  "jupyter",
  "ipykernel",
  "matplotlib>=3.7"
]

# Dev/test/tooling
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.5",
  "mypy>=1.8",
]

# Convenience "all" bundle for users who want everything at once
all = [
  "jupyter",
  "ipykernel",
  "matplotlib>=3.7",
  "pyproj>=3.5",
]

[project.urls]
Repository = "https://github.com/Stingy37/hrss"

# ------------- distribution
[tool.hatch.build.targets.wheel]
packages = ["hrss"]

[tool.hatch.build.targets.sdist]
include = ["hrss", "pyproject.toml", "README.*", "LICENSE*"]
exclude = ["**/__pycache__", ".venv", ".git", "dist", "build"]

# ------------- pytest dev settings
[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s %(levelname)s %(name)s:%(lineno)d - %(message)s"
log_cli_date_format = "%H:%M:%S"
addopts = "-s"
